Updated/New clasifications icons
Updated UK icons to current icons. Added Portugal icons

--- a/resource.images.classificationicons.colour/changelog.txt
+++ b/resource.images.classificationicons.colour/changelog.txt
@@ -1,3 +1,8 @@
+v0.0.4
+- Add Portuguese icon files (thanks Rootzpower for icons).
+- Update UK icons to new designs (thanks Roidy for new icons)
+- Update Readme.md file to show current supported countrys
+
 v0.0.3
 - Add alternate naming of Spanish files to allow for Embuary skin helper script returning (12Horas) or (24Horas) at end of country name.
 - Update Readme.md file to show current supported countrys
